docs(copy button): fix overflow bug

--- a/apps/documentation/src/components/CopyButton.scss
+++ b/apps/documentation/src/components/CopyButton.scss
@@ -1,6 +1,6 @@
 @import '~@entur/tokens/dist/styles.scss';
 
-.eds-copy-button.eds-button--variant-tertiary {
+.eds-copy-button.eds-button--variant-secondary {
   min-height: 2rem;
   height: fit-content;
   width: fit-content;
